# knowledgeable-embedding

./: README.md  pyproject.toml  requirements.txt
scripts/: annotate_entities.py  build_dictionary_entity_linker.py  build_entity_reverse_index.py  build_entity_vocab.py  build_hf_model.py  build_hf_tokenizer.py  compute_entity_embeddings.py  convert_dpr_checkpoint.py  count_entity_occurrences.py  encode_dataset.py  evaluate.py  push_model_to_hub.py  tokenize_dataset.py
scripts/msmarco/: build_training_dataset.py  convert_results.py  download.sh  preprocess_corpus.py  preprocess_queries.py
scripts/wikidata/: extract_wikidata_ids.py
scripts/wikipedia/: extract_wikipedia_redirects.py  preprocess.py
scripts/wikipedia_qa/: build_training_dataset.py  compute_eq_results.py  download.sh  preprocess_entity_questions.py  preprocess_eq_results.py  preprocess_passages.py  preprocess_queries.py  preprocess_test_queries.py
src/kembed/: __init__.py  arguments.py  configuration.py  data.py  modeling.py  retriever.py  train.py
src/kembed/embedder/: base.py  bert.py
src/kembed/entity_linker/: dictionary.py  mention.py  refined.py
src/kembed/utils/: __init__.py  msmarco_eval.py  preprocessing.py  qa_eval.py  reverse_index_trie.py
tests/embedder/: test_bert.py
