[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "setuptools_scm"]

[tool.setuptools]
packages = ["kembed"]
package-dir = {"" = "src"}

[project]
description = ""
name = "knowledgeable-embedding"
version = "0.0.1"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"